[package]
name = "adwstyletoggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

glib = { version = "^0.18" }
gio = { version = "^0.18" }
pango = { version = "^0.18" }
gdk = { package = "gdk4", version = "^0.7", features = ["v4_12"] }
gtk = { package = "gtk4", version = "^0.7", features = ["v4_12"] }

adw = { package = "libadwaita", version = "0.5", features = ["v1_4"] }